Remove some css on 'expanders' that was causing modal buttons to not show up correctly.
Modals triggered from expanders were getting a 'background-color:transparent' tag which then
caused the modal buttons to be unreadable. In general, I don't think we want expander-contents
to be treated differently than other cells, so if we want to bring this behavior back
we should do it with some kind of styling mixin that we can apply to a cell.

--- a/object_database/web/content/app.css
+++ b/object_database/web/content/app.css
@@ -262,16 +262,6 @@ td.row-index-item {
     flex: 1;
  }
 
- .expands[data-is-open="false"] > .expands-content-area:hover,
- .expands[data-is-open="true"] > .expands-content-area > * > *:hover {
-     background-color: rgba(200, 200, 200, 0.1);
-     cursor: pointer;
- }
-
- .expands-content-area:hover button {
-     background-color: transparent;
- }
-
 /* Modals (bypasses Bootstrap implementation)
 * =============================================================*/
 
